# AarthikPro

./: .env.example  .gitignore  AWS_EMBEDDING_DEPLOYMENT.md  DEPLOYMENT.md  Dockerfile  Dockerfile.worker  GIT_BACKEND_SETUP.md  GIT_COMPLETE_SETUP.md  OPENAI_EMBEDDINGS_MIGRATION.md  PUSH_NEW_REPO.md  PUSH_TO_GITHUB.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  SETUP.md  SYSTEM_GUIDE.md  ZERODHA_SETUP.md  deplot_architect.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
backend/: DOCKER_BUILD_GUIDE.md  Dockerfile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  TESTING.md  TROUBLESHOOTING.md  __init__.py  config.py  docker-compose.backend.yml  main.py  requirements.txt  start_backend.sh  start_worker.sh
backend/postman/: AarthikAI_Backend.postman_collection.json
backend/scripts/: health_check.sh
backend/services/: chat_service.py
data/: download_state.json
scripts/: analyze_mongodb_schema.py  build_isin_mapping.py  check_df_columns.py  cleanup_mongodb.py  dhan_diagnostic_complete.py  download_pdfs.py  extract_pdfs.py  get_zerodha_tokens_simple.py  langgraph_integration_example.py  market_data_worker.py  patch_dhan_client.py  preload_dhan_instruments.py  refresh_zerodha_token.py  reset_pinecone.py  sync_dhan_segments.py
scripts/migrations/: 001_add_processing_state.py  README.md  mongo_helpers.py
src/: __init__.py  config.py  intent_classifier.py  ui_helpers.py
src/analytics/: __init__.py  deterministic_engine.py
src/auth/: __init__.py  token_manager.py  zerodha_oauth.py
src/blueprints/: __init__.py  canonical_intents.py  citations.py  evidence.py  geopolitics_prompts.py  intent_mapper.py  legacy_mapper.py  market_overview_prompt_v2.py  prompts.py  schemas.py
src/cache/: __init__.py  semantic_cache.py
src/core/: __init__.py  canonical_intents.py  question_normalizer.py
src/data/: __init__.py  conversation_history.py  dhan_client.py  dhan_instruments_cache.py  dhan_instruments_cache_v2.py  dhan_segment_instruments.py  dhan_symbol_mapping.py  enhanced_mongo_client.py  indian_api_client.py  indian_news.py  instruments_cache.py  market_snapshot.py  mongo_client.py  nifty_analytics.py  nse_client.py  perplexity_client.py  redis_client.py  sectoral_indices.py  vector_store.py  vertical_intelligence.py  zerodha_client.py  zerodha_portfolio.py
src/extraction/: __init__.py  llm_client.py  temperature_rules.py  vertical_config.py
(+67 files in other folders)
