[tool.poetry]
name = "aarthik-ai"
version = "0.1.0"
description = "Financial Intelligence Chatbot with LangGraph and Chainlit"
authors = ["Rudra"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Core Framework
fastapi 
uvicorn
pydantic
pydantic-settings 

# LangChain & LangGraph
langchain
langchain-openai
langchain-anthropic 
langgraph
langchain-community
langsmith 

# Vector Store & Embeddings
pinecone-client 
sentence-transformers 

# Database
pymongo 
motor
redis

# API Clients
httpx 
openai 

# Frontend
chainlit

# Utilities
python-dotenv
tenacity
tiktoken

[tool.poetry.group.dev.dependencies]
pytest 
pytest-asyncio
black 
ruff 
mypy

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
